--- a/DotnetAngularBoilerplate.WebClient/src/app/pages/login/login/login.component.html
+++ b/DotnetAngularBoilerplate.WebClient/src/app/pages/login/login/login.component.html
@@ -6,13 +6,13 @@
             <!-- image -->
             <div class="col-md-6 m-0 p-0">
                 <img class="login-cover-image"
-                    src="https://s3.ap-south-1.amazonaws.com/webclient.bucket/Images/login_side_img.jpg?response-content-disposition=inline&X-Amz-Security-Token=IQoJb3JpZ2luX2VjEOv%2F%2F%2F%2F%2F%2F%2F%2F%2F%2FwEaCmFwLXNvdXRoLTEiRzBFAiEAyPnmHPJX7p1dsHgdoS82%2FClqUw7UYCqdoFkcURFXtPgCIGByYKH3SED26lu6VQoAHEtI27D%2Fik9V%2F1XVu55W42YtKuQCCBUQABoMNzQ1ODI0NDM1NjEyIgyyJI1SKr8jQaWqinAqwQJ6DcPaO1n%2BsiqPqT86sj1FfRMl1aNJH7%2FrWDSFHkUXtQwK6pETxATUTLtKXfUL4gbcpQv8MwYTQqetT7vMKjNeM%2FBFwu5XNE4%2B7uXYeMOlVGCL2OIB%2F1H3zG5BGZCPnRSC7QVghUvgM6B4WcksFO9LP5kPaIFEmymVorTdyzlHpFJskxtqg1LEAptQVhPoA4H4ZvGMfh0m6kLHd6PwXa3IcHJGFFDZyeebs6r71VAgQf9jO2tLOZLVJJuDf9elabJ8DMZCtjPiFceYEvprLCoYR3O6%2FIOxzEoh3%2BOEXlVAjNkxOAMfsmastQ7GQFlPCbGAmMa71r%2FHRH%2FxvTw0eYKbyVc%2F6jYGTfC1FBLWRfsFmcMxkomSC5PxqNVBQZabWeZkLd6P0Or3iZBGPsuXGMTQe3onLCpWtL8sTEAZq1aLihcwkYzUqQY6swJjgpIqiJ1xPgqvBCYbRxx6FujEcTVwLfQ5t9uKbvFKEkl2KTaSocTGSrlPCKl3W8DB7%2F4OLGftbbPa30an3mJuT9B6ktxKr%2FP6VXvPBvON2zYmF6JROb%2BKiBrYUYiDi7t7PgEJf4ql%2FVfOyCCQbkpyNqo9lrDy0pbQThpvW5nkqOk2VNe%2BNwLiOS2TfCrX1fRT7%2FNWAQrtE3Ma1OxVy8Ka5Bnh9dxKTr4RsYLcifbl6kyn6lChyj0q7tcMQgwTh05b2iCTTiuKYsArJIKNZq7xxZx4aVVs7osbFdZKmSSvkpBnAYik0ic4Hg6kWC%2FdRAC%2BWlBIgdEVbWmZBuk7w3EblNdbNUPZcKw%2FLpaGzazve4J%2B9iP6JECBHkm9zSYYz12F0an7%2F59fiRd6kg%2FCy0dYLCyF&X-Amz-Algorithm=AWS4-HMAC-SHA256&X-Amz-Date=20231022T113128Z&X-Amz-SignedHeaders=host&X-Amz-Expires=43200&X-Amz-Credential=ASIA23JUZXWOCA22CE3H%2F20231022%2Fap-south-1%2Fs3%2Faws4_request&X-Amz-Signature=49341cca099ebf00fe90260e43c9ab99c34f2b5c5408e22337b5c9360f7806e4"
+                    src="https://s3.ap-south-1.amazonaws.com/webclient.bucket/Images/login_side_img.jpg"
                     alt="Login" />
             </div>
             <!-- login details -->
             <div class="col-md-6 m-0 p-0">
                 <div class="logo">
-                    <img src="https://s3.ap-south-1.amazonaws.com/webclient.bucket/Images/Untitled%20design.png?response-content-disposition=inline&X-Amz-Security-Token=IQoJb3JpZ2luX2VjEOv%2F%2F%2F%2F%2F%2F%2F%2F%2F%2FwEaCmFwLXNvdXRoLTEiRzBFAiEAyPnmHPJX7p1dsHgdoS82%2FClqUw7UYCqdoFkcURFXtPgCIGByYKH3SED26lu6VQoAHEtI27D%2Fik9V%2F1XVu55W42YtKuQCCBUQABoMNzQ1ODI0NDM1NjEyIgyyJI1SKr8jQaWqinAqwQJ6DcPaO1n%2BsiqPqT86sj1FfRMl1aNJH7%2FrWDSFHkUXtQwK6pETxATUTLtKXfUL4gbcpQv8MwYTQqetT7vMKjNeM%2FBFwu5XNE4%2B7uXYeMOlVGCL2OIB%2F1H3zG5BGZCPnRSC7QVghUvgM6B4WcksFO9LP5kPaIFEmymVorTdyzlHpFJskxtqg1LEAptQVhPoA4H4ZvGMfh0m6kLHd6PwXa3IcHJGFFDZyeebs6r71VAgQf9jO2tLOZLVJJuDf9elabJ8DMZCtjPiFceYEvprLCoYR3O6%2FIOxzEoh3%2BOEXlVAjNkxOAMfsmastQ7GQFlPCbGAmMa71r%2FHRH%2FxvTw0eYKbyVc%2F6jYGTfC1FBLWRfsFmcMxkomSC5PxqNVBQZabWeZkLd6P0Or3iZBGPsuXGMTQe3onLCpWtL8sTEAZq1aLihcwkYzUqQY6swJjgpIqiJ1xPgqvBCYbRxx6FujEcTVwLfQ5t9uKbvFKEkl2KTaSocTGSrlPCKl3W8DB7%2F4OLGftbbPa30an3mJuT9B6ktxKr%2FP6VXvPBvON2zYmF6JROb%2BKiBrYUYiDi7t7PgEJf4ql%2FVfOyCCQbkpyNqo9lrDy0pbQThpvW5nkqOk2VNe%2BNwLiOS2TfCrX1fRT7%2FNWAQrtE3Ma1OxVy8Ka5Bnh9dxKTr4RsYLcifbl6kyn6lChyj0q7tcMQgwTh05b2iCTTiuKYsArJIKNZq7xxZx4aVVs7osbFdZKmSSvkpBnAYik0ic4Hg6kWC%2FdRAC%2BWlBIgdEVbWmZBuk7w3EblNdbNUPZcKw%2FLpaGzazve4J%2B9iP6JECBHkm9zSYYz12F0an7%2F59fiRd6kg%2FCy0dYLCyF&X-Amz-Algorithm=AWS4-HMAC-SHA256&X-Amz-Date=20231022T150349Z&X-Amz-SignedHeaders=host&X-Amz-Expires=43200&X-Amz-Credential=ASIA23JUZXWOCA22CE3H%2F20231022%2Fap-south-1%2Fs3%2Faws4_request&X-Amz-Signature=07ef8fd5061a5c9ee110c4a0470d8879bae73b15ec8ce80c118c94d670b209c3"
+                    <img src="https://s3.ap-south-1.amazonaws.com/webclient.bucket/Images/Untitled+design.png"
                         alt="">
                     <p class="logo-slogan text-center">Turning Dreams into Code: Building Apps Beyond Boundaries!</p>
                 </div>
@@ -20,7 +20,7 @@
                     <div class="card mr-3 login-form-card">
                         <div class="card-body">
                             <h3 class="card-title font-weight-bolder mb-3">Sign into your account</h3>
-                            <form #loginForm="ngForm">
+                            <form #loginForm="ngForm" (ngSubmit)="onLogin(loginForm)">
                                 <div class="form-group">
                                     <label for="loginEmailUsername" class="font-weight-bold">Email address or
                                         username</label>
@@ -28,18 +28,18 @@
                                         <div class="input-group-prepend input-group-lg">
                                             <div class="input-group-text">@</div>
                                         </div>
-                                        <input type="email" class="form-control " name="loginEmailUsername"
-                                            placeholder="something@domain.com">
+                                        <input name="loginEmailUsername" type="email" class="form-control"
+                                            placeholder="something@domain.com" ngModel>
                                     </div>
                                 </div>
                                 <div class="form-group">
-                                    <label for="loginEmailUsername">Password</label>
+                                    <label for="loginPassword">Password</label>
                                     <div class="input-group mb-2">
                                         <div class="input-group-prepend input-group-lg">
                                             <div class="input-group-text">#</div>
                                         </div>
-                                        <input type="password" class="form-control" name="loginPassword"
-                                            placeholder="Your password">
+                                        <input name="loginPassword" type="password" class="form-control" 
+                                            placeholder="Your password" ngModel>
 
                                         <!-- <small id="loginPasswordHelpBlock" class="form-text text-muted">
                                             Your password must be 8-20 characters long, contain letters and numbers, and
@@ -49,7 +49,7 @@
                                 </div>
                                 <div class="row">
                                     <div class="col-md-6">
-                                        <p-checkbox [(ngModel)]="isRememberMeChecked" [binary]="true"
+                                        <p-checkbox name="loginRememberMe" [(ngModel)]="isRememberMeChecked" [binary]="true"
                                             label="Remember me" inputId="binary"></p-checkbox>
                                     </div>
                                     <div class="col-md-6">
@@ -58,18 +58,18 @@
                                     </div>
                                 </div>
                                 <div class="form-group card flex justify-content-center mt-3">
-                                    <button pButton label="Login" class="submit-button" [loading]="isLoading"
-                                        (onClick)="onLogin(loginForm)"></button>
+                                    <button pButton label="Login" class="submit-button" [disabled]="isLoading"
+                                        ></button>
                                 </div>
                             </form>
                             <hr>
                             <div class="social-login">
                                 <p class="text-center m-2">Or Sign in with</p>
-                                <div class="row">
+                                <div class="row mb-2">
                                     <div class="col-md-4">
                                         <div class="form-group card flex justify-content-center">
                                             <button pButton class="submit-button p-button-raised google"
-                                                [loading]="isLoading" (onClick)="onLogin(loginForm)"><svg
+                                                [disabled]="isLoading" (onClick)="onSocialLogin('Goggle')"><svg
                                                     xmlns="http://www.w3.org/2000/svg" height="24" viewBox="0 0 24 24"
                                                     width="24">
                                                     <path
@@ -93,7 +93,7 @@
                                     <div class="col-md-4">
                                         <div class="form-group card flex justify-content-center">
                                             <button pButton class="submit-button p-button-raised google"
-                                                [loading]="isLoading" (onClick)="onLogin(loginForm)"><svg
+                                                [disabled]="isLoading" (onClick)="onSocialLogin('Microsoft')"><svg
                                                     xmlns="http://www.w3.org/2000/svg" version="1.1"
                                                     viewBox="0 0 337.6 72">
                                                     <path fill="#737373"
@@ -109,11 +109,14 @@
                                     <div class="col-md-4">
                                         <div class="form-group card flex justify-content-center">
                                             <button pButton class="submit-button p-button-raised google"
-                                                 [loading]="isLoading" (onClick)="onLogin(loginForm)">
-                                                 <svg width="1024px" height="1024px" viewBox="0 0 1024 1024" xmlns="http://www.w3.org/2000/svg">
-                                                    <circle cx="512" cy="512" r="512" style="fill:#008aaa"/>
-                                                    <path d="M786.2 395.5h-80.6c-1.5 0-3-.8-3.7-2.1l-64.7-112.2c-.8-1.3-2.2-2.1-3.8-2.1h-264c-1.5 0-3 .8-3.7 2.1l-67.3 116.4-64.8 112.2c-.7 1.3-.7 2.9 0 4.3l64.8 112.2 67.2 116.5c.7 1.3 2.2 2.2 3.7 2.1h264.1c1.5 0 3-.8 3.8-2.1L702 630.6c.7-1.3 2.2-2.2 3.7-2.1h80.6c2.7 0 4.8-2.2 4.8-4.8V400.4c-.1-2.7-2.3-4.9-4.9-4.9zM477.5 630.6l-20.3 35c-.3.5-.8 1-1.3 1.3-.6.3-1.2.5-1.9.5h-40.3c-1.4 0-2.7-.7-3.3-2l-60.1-104.3-5.9-10.3-21.6-36.9c-.3-.5-.5-1.1-.4-1.8 0-.6.2-1.3.5-1.8l21.7-37.6 65.9-114c.7-1.2 2-2 3.3-2H454c.7 0 1.4.2 2.1.5.5.3 1 .7 1.3 1.3l20.3 35.2c.6 1.2.5 2.7-.2 3.8l-65.1 112.8c-.3.5-.4 1.1-.4 1.6 0 .6.2 1.1.4 1.6l65.1 112.7c.9 1.5.8 3.1 0 4.4zm202.1-116.7L658 550.8l-5.9 10.3L592 665.4c-.7 1.2-1.9 2-3.3 2h-40.3c-.7 0-1.3-.2-1.9-.5-.5-.3-1-.7-1.3-1.3l-20.3-35c-.9-1.3-.9-2.9-.1-4.2l65.1-112.7c.3-.5.4-1.1.4-1.6 0-.6-.2-1.1-.4-1.6l-65.1-112.8c-.7-1.2-.8-2.6-.2-3.8l20.3-35.2c.3-.5.8-1 1.3-1.3.6-.4 1.3-.5 2.1-.5h40.4c1.4 0 2.7.7 3.3 2l65.9 114 21.7 37.6c.3.6.5 1.2.5 1.8 0 .4-.2 1-.5 1.6z" style="fill:#fff"/>
-                                                 </svg>                                                 
+                                                [disabled]="isLoading" (onClick)="onSocialLogin('Keycloak')">
+                                                <svg width="1024px" height="1024px" viewBox="0 0 1024 1024"
+                                                    xmlns="http://www.w3.org/2000/svg">
+                                                    <circle cx="512" cy="512" r="512" style="fill:#008aaa" />
+                                                    <path
+                                                        d="M786.2 395.5h-80.6c-1.5 0-3-.8-3.7-2.1l-64.7-112.2c-.8-1.3-2.2-2.1-3.8-2.1h-264c-1.5 0-3 .8-3.7 2.1l-67.3 116.4-64.8 112.2c-.7 1.3-.7 2.9 0 4.3l64.8 112.2 67.2 116.5c.7 1.3 2.2 2.2 3.7 2.1h264.1c1.5 0 3-.8 3.8-2.1L702 630.6c.7-1.3 2.2-2.2 3.7-2.1h80.6c2.7 0 4.8-2.2 4.8-4.8V400.4c-.1-2.7-2.3-4.9-4.9-4.9zM477.5 630.6l-20.3 35c-.3.5-.8 1-1.3 1.3-.6.3-1.2.5-1.9.5h-40.3c-1.4 0-2.7-.7-3.3-2l-60.1-104.3-5.9-10.3-21.6-36.9c-.3-.5-.5-1.1-.4-1.8 0-.6.2-1.3.5-1.8l21.7-37.6 65.9-114c.7-1.2 2-2 3.3-2H454c.7 0 1.4.2 2.1.5.5.3 1 .7 1.3 1.3l20.3 35.2c.6 1.2.5 2.7-.2 3.8l-65.1 112.8c-.3.5-.4 1.1-.4 1.6 0 .6.2 1.1.4 1.6l65.1 112.7c.9 1.5.8 3.1 0 4.4zm202.1-116.7L658 550.8l-5.9 10.3L592 665.4c-.7 1.2-1.9 2-3.3 2h-40.3c-.7 0-1.3-.2-1.9-.5-.5-.3-1-.7-1.3-1.3l-20.3-35c-.9-1.3-.9-2.9-.1-4.2l65.1-112.7c.3-.5.4-1.1.4-1.6 0-.6-.2-1.1-.4-1.6l-65.1-112.8c-.7-1.2-.8-2.6-.2-3.8l20.3-35.2c.3-.5.8-1 1.3-1.3.6-.4 1.3-.5 2.1-.5h40.4c1.4 0 2.7.7 3.3 2l65.9 114 21.7 37.6c.3.6.5 1.2.5 1.8 0 .4-.2 1-.5 1.6z"
+                                                        style="fill:#fff" />
+                                                </svg>
                                                 <p class="social-media-name">Keycloak</p>
                                             </button>
                                         </div>
@@ -123,7 +126,7 @@
                             <hr>
                             <div class="register">
                                 <span>Don't have an account? </span> <button pButton type="button" label="Register"
-                                            class="p-button-link register-button" (onClick)="forgotPassword()"></button>
+                                    class="p-button-link register-button" (onClick)="redirectToRegister()"></button>
                             </div>
                         </div>
                     </div>
