--- a/DotnetAngularBoilerplate.WebClient/src/app/pages/auth/login/login.component.html
+++ b/DotnetAngularBoilerplate.WebClient/src/app/pages/auth/login/login.component.html
@@ -1,3 +1,5 @@
+<!-- eslint-disable @angular-eslint/template/interactive-supports-focus -->
+<!-- eslint-disable @angular-eslint/template/click-events-have-key-events -->
 <!-- eslint-disable @angular-eslint/template/elements-content -->
 <div class="login-section">
     <div class="login-header"></div>
@@ -6,14 +8,12 @@
             <!-- image -->
             <div class="col-md-6 m-0 p-0">
                 <img class="login-cover-image"
-                    src="https://s3.ap-south-1.amazonaws.com/webclient.bucket/Images/login_side_img.jpg"
-                    alt="Login" />
+                    src="https://s3.ap-south-1.amazonaws.com/webclient.bucket/Images/login_side_img.jpg" alt="Login" />
             </div>
             <!-- login details -->
             <div class="col-md-6 m-0 p-0">
                 <div class="logo">
-                    <img src="https://s3.ap-south-1.amazonaws.com/webclient.bucket/Images/Untitled+design.png"
-                        alt="">
+                    <img src="https://s3.ap-south-1.amazonaws.com/webclient.bucket/Images/Untitled+design.png" alt="">
                     <p class="logo-slogan text-center">Turning Dreams into Code: Building Apps Beyond Boundaries!</p>
                 </div>
                 <div class="login-form">
@@ -38,9 +38,14 @@
                                         <div class="input-group-prepend input-group-lg">
                                             <div class="input-group-text">#</div>
                                         </div>
-                                        <input name="loginPassword" type="password" class="form-control" 
-                                            placeholder="Your password" ngModel>
-
+                                        <input name="loginPassword" type="password" class="form-control"
+                                            placeholder="Your password" #passwordElement ngModel>
+                                            <div class="input-group-prepend input-group-lg">
+                                                <div class="input-group-text show-password-wrapper" [title]="!showPassword? 'Show password': 'Hide password'" (click)="showHidePassword(passwordElement)">
+                                                    <i *ngIf="!showPassword" class='bx bx-show show-password'></i>
+                                                    <i *ngIf="showPassword" class='bx bx-hide show-password'></i>
+                                                </div>
+                                            </div>
                                         <!-- <small id="loginPasswordHelpBlock" class="form-text text-muted">
                                             Your password must be 8-20 characters long, contain letters and numbers, and
                                             must not contain spaces, special characters, or emoji.
@@ -49,8 +54,8 @@
                                 </div>
                                 <div class="row">
                                     <div class="col-md-6">
-                                        <p-checkbox name="loginRememberMe" [(ngModel)]="isRememberMeChecked" [binary]="true"
-                                            label="Remember me" inputId="binary"></p-checkbox>
+                                        <p-checkbox name="loginRememberMe" [(ngModel)]="isRememberMeChecked"
+                                            [binary]="true" label="Remember me" inputId="binary"></p-checkbox>
                                     </div>
                                     <div class="col-md-6">
                                         <button pButton type="button" label="Forgot password"
@@ -58,8 +63,8 @@
                                     </div>
                                 </div>
                                 <div class="form-group card flex justify-content-center mt-3">
-                                    <button pButton label="Login" class="submit-button" [disabled]="isLoading"
-                                        ></button>
+                                    <button pButton label="Sign in" class="submit-button"
+                                        [disabled]="isLoading"></button>
                                 </div>
                             </form>
                             <hr>
@@ -70,8 +75,8 @@
                                         <div class="form-group card flex justify-content-center">
                                             <button pButton class="submit-button p-button-raised google"
                                                 [disabled]="isLoading" (onClick)="onSocialLogin('Goggle')"><svg
-                                                    xmlns="http://www.w3.org/2000/svg" height="24" viewBox="0 0 24 24"
-                                                    width="24">
+                                                    xmlns="http://www.w3.org/2000/svg" height="35" viewBox="0 0 24 24"
+                                                    width="35">
                                                     <path
                                                         d="M22.56 12.25c0-.78-.07-1.53-.2-2.25H12v4.26h5.92c-.26 1.37-1.04 2.53-2.21 3.31v2.77h3.57c2.08-1.92 3.28-4.74 3.28-8.09z"
                                                         fill="#4285F4" />
@@ -111,11 +116,11 @@
                                             <button pButton class="submit-button p-button-raised google"
                                                 [disabled]="isLoading" (onClick)="onSocialLogin('Keycloak')">
                                                 <svg width="1024px" height="1024px" viewBox="0 0 1024 1024"
-                                                    xmlns="http://www.w3.org/2000/svg">
-                                                    <circle cx="512" cy="512" r="512" style="fill:#008aaa" />
-                                                    <path
-                                                        d="M786.2 395.5h-80.6c-1.5 0-3-.8-3.7-2.1l-64.7-112.2c-.8-1.3-2.2-2.1-3.8-2.1h-264c-1.5 0-3 .8-3.7 2.1l-67.3 116.4-64.8 112.2c-.7 1.3-.7 2.9 0 4.3l64.8 112.2 67.2 116.5c.7 1.3 2.2 2.2 3.7 2.1h264.1c1.5 0 3-.8 3.8-2.1L702 630.6c.7-1.3 2.2-2.2 3.7-2.1h80.6c2.7 0 4.8-2.2 4.8-4.8V400.4c-.1-2.7-2.3-4.9-4.9-4.9zM477.5 630.6l-20.3 35c-.3.5-.8 1-1.3 1.3-.6.3-1.2.5-1.9.5h-40.3c-1.4 0-2.7-.7-3.3-2l-60.1-104.3-5.9-10.3-21.6-36.9c-.3-.5-.5-1.1-.4-1.8 0-.6.2-1.3.5-1.8l21.7-37.6 65.9-114c.7-1.2 2-2 3.3-2H454c.7 0 1.4.2 2.1.5.5.3 1 .7 1.3 1.3l20.3 35.2c.6 1.2.5 2.7-.2 3.8l-65.1 112.8c-.3.5-.4 1.1-.4 1.6 0 .6.2 1.1.4 1.6l65.1 112.7c.9 1.5.8 3.1 0 4.4zm202.1-116.7L658 550.8l-5.9 10.3L592 665.4c-.7 1.2-1.9 2-3.3 2h-40.3c-.7 0-1.3-.2-1.9-.5-.5-.3-1-.7-1.3-1.3l-20.3-35c-.9-1.3-.9-2.9-.1-4.2l65.1-112.7c.3-.5.4-1.1.4-1.6 0-.6-.2-1.1-.4-1.6l-65.1-112.8c-.7-1.2-.8-2.6-.2-3.8l20.3-35.2c.3-.5.8-1 1.3-1.3.6-.4 1.3-.5 2.1-.5h40.4c1.4 0 2.7.7 3.3 2l65.9 114 21.7 37.6c.3.6.5 1.2.5 1.8 0 .4-.2 1-.5 1.6z"
-                                                        style="fill:#fff" />
+                                                        xmlns="http://www.w3.org/2000/svg">
+                                                        <circle cx="512" cy="512" r="512" style="fill:#008aaa" />
+                                                        <path
+                                                            d="M786.2 395.5h-80.6c-1.5 0-3-.8-3.7-2.1l-64.7-112.2c-.8-1.3-2.2-2.1-3.8-2.1h-264c-1.5 0-3 .8-3.7 2.1l-67.3 116.4-64.8 112.2c-.7 1.3-.7 2.9 0 4.3l64.8 112.2 67.2 116.5c.7 1.3 2.2 2.2 3.7 2.1h264.1c1.5 0 3-.8 3.8-2.1L702 630.6c.7-1.3 2.2-2.2 3.7-2.1h80.6c2.7 0 4.8-2.2 4.8-4.8V400.4c-.1-2.7-2.3-4.9-4.9-4.9zM477.5 630.6l-20.3 35c-.3.5-.8 1-1.3 1.3-.6.3-1.2.5-1.9.5h-40.3c-1.4 0-2.7-.7-3.3-2l-60.1-104.3-5.9-10.3-21.6-36.9c-.3-.5-.5-1.1-.4-1.8 0-.6.2-1.3.5-1.8l21.7-37.6 65.9-114c.7-1.2 2-2 3.3-2H454c.7 0 1.4.2 2.1.5.5.3 1 .7 1.3 1.3l20.3 35.2c.6 1.2.5 2.7-.2 3.8l-65.1 112.8c-.3.5-.4 1.1-.4 1.6 0 .6.2 1.1.4 1.6l65.1 112.7c.9 1.5.8 3.1 0 4.4zm202.1-116.7L658 550.8l-5.9 10.3L592 665.4c-.7 1.2-1.9 2-3.3 2h-40.3c-.7 0-1.3-.2-1.9-.5-.5-.3-1-.7-1.3-1.3l-20.3-35c-.9-1.3-.9-2.9-.1-4.2l65.1-112.7c.3-.5.4-1.1.4-1.6 0-.6-.2-1.1-.4-1.6l-65.1-112.8c-.7-1.2-.8-2.6-.2-3.8l20.3-35.2c.3-.5.8-1 1.3-1.3.6-.4 1.3-.5 2.1-.5h40.4c1.4 0 2.7.7 3.3 2l65.9 114 21.7 37.6c.3.6.5 1.2.5 1.8 0 .4-.2 1-.5 1.6z"
+                                                            style="fill:#fff" />
                                                 </svg>
                                                 <p class="social-media-name">Keycloak</p>
                                             </button>
@@ -125,8 +130,8 @@
                             </div>
                             <hr>
                             <div class="register">
-                                <span>Don't have an account? </span> <button pButton type="button" label="Register"
-                                    class="p-button-link register-button" (onClick)="redirectToRegister()"></button>
+                                <span>Don't have an account? </span> 
+                                <button pButton type="button" label="Sign up" class="p-button-link register-button" (onClick)="redirectToRegister()"></button>
                             </div>
                         </div>
                     </div>
