--- a/DotnetAngularBoilerplate.WebClient/src/app/pages/auth/login/login.component.scss
+++ b/DotnetAngularBoilerplate.WebClient/src/app/pages/auth/login/login.component.scss
@@ -51,13 +51,13 @@
 }
 .google {
   background-color: white;
-  color: black;
-  border-color: grey;
+  color: #737373;
+  border-color: #737373;
 }
 .google:hover {
-  background-color: grey;
+  background-color: #B9B9BA;
   color: white;
-  border-color: grey;
+  border-color: #B9B9BA;
 }
 .login-form-card {
   border: 0;
@@ -73,10 +73,17 @@
   margin-top: 1rem;
   margin-left: 0.5rem;
   font-weight: bold;
+  color: #737373;
 }
 .register-button{
   padding: 0 !important;
 }
 hr{
   margin: 0.4rem 0 0.4rem 0!important;
+}
+.show-password{
+  line-height: inherit;
+}
+.show-password-wrapper{
+  cursor: pointer;
 }
